feat: 🎸 @omakase-ui/responsive-design-mode

--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@thaddeusjiang/react-table": "^0.1.0",
+    "@omakase-ui/react-table": "^0.1.1",
+    "@omakase-ui/responsive-design-mode": "^0.0.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
