--- a/packages/responsive-design-mode/package.json
+++ b/packages/responsive-design-mode/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@omakase-ui/react-table",
+  "name": "@omakase-ui/responsive-design-mode",
   "author": "Thaddeus Jiang",
-  "version": "0.1.3",
+  "version": "0.0.1",
   "license": "MIT",
+  "dependencies": {
+    "@heroicons/react": "^1.0.6"
+  },
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
@@ -14,12 +17,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "react-table": "^7.7.0"
-  },
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "files": [
     "dist",
     "src"
@@ -38,14 +37,14 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "module": "dist/react-table.esm.js",
+  "module": "dist/responsive-design-mode.esm.js",
   "size-limit": [
     {
-      "path": "dist/react-table.cjs.production.min.js",
+      "path": "dist/responsive-design-mode.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/react-table.esm.js",
+      "path": "dist/responsive-design-mode.esm.js",
       "limit": "10 KB"
     }
   ],
@@ -63,30 +62,36 @@
     "@testing-library/user-event": "^14.0.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "@types/react-table": "^7.7.10",
     "@types/testing-library__jest-dom": "^5.14.3",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "cssnano": "^5.1.7",
-    "daisyui": "^2.13.6",
     "husky": "^7.0.4",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "postcss": "^8.4.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-is": "^18.0.0",
-    "rollup-plugin-postcss": "^4.0.2",
     "size-limit": "^7.0.8",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "homepage": "https://github.com/ThaddeusJiang/omakase-ui/tree/main/packages/responsive-design-mode#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ThaddeusJiang/omakase-ui/packages/responsive-design-mode.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ThaddeusJiang/omakase-ui/packages/responsive-design-mode/issues"
+  },
   "keywords": [
-    "React.js",
-    "Table Component",
-    "React Table",
-    "React Table Component",
-    "TyeScript"
+    "Responsive Design Mode",
+    "Omakase UI",
+    "React"
   ]
 }
