@omakase-ui/react-table 0.1.4-rc.1

--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@omakase-ui/react-table": "^0.1.1",
-    "@omakase-ui/responsive-design-mode": "^0.0.1",
     "@omakase-ui/editor-layout": "^0.0.1",
+    "@omakase-ui/react-table": "^0.1.4-rc.1",
+    "@omakase-ui/responsive-design-mode": "^0.0.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
