--- a/packages/react-table/package.json
+++ b/packages/react-table/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@omakase-ui/react-table",
   "author": "Thaddeus Jiang",
-  "version": "0.1.4",
+  "version": "0.1.5-rc.1",
   "license": "MIT",
   "scripts": {
     "start": "tsdx watch",
