--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@omakase-ui/editor-layout": "^0.0.1",
-    "@omakase-ui/react-table": "^0.1.4-rc.1",
-    "@omakase-ui/responsive-design-mode": "^0.0.1",
+    "@omakase-ui/react-table": "*",
+    "@omakase-ui/responsive-design-mode": "*",
+    "@omakase-ui/react-sortable-list": "*",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -25,6 +25,9 @@
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.5",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "tsconfig": "*",
+    "tailwind-config": "*",
+    "eslint-config-custom": "*"
   }
 }
