--- a/packages/react-table/package.json
+++ b/packages/react-table/package.json
@@ -18,12 +18,11 @@
     "classnames": "^2.3.1",
     "react-table": "^7.7.0"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "src"
-  ],
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": "./dist"
+  },
   "peerDependencies": {
     "react": ">=16"
   },
@@ -38,7 +37,6 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "module": "dist/react-table.esm.js",
   "size-limit": [
     {
       "path": "dist/react-table.cjs.production.min.js",
@@ -80,7 +78,10 @@
     "tailwindcss": "^3.0.23",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "tsconfig": "*",
+    "tailwind-config": "*",
+    "eslint-config-custom": "*"
   },
   "keywords": [
     "React.js",
