ci: modify turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,12 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**", ".next/**"]
+      "outputs": ["dist/**"]
+    },
+    "web#build": {
+      "dependsOn": ["^build"],
+      "env": ["SOME_OTHER_ENV_VAR"],
+      "outputs": [".next/**"]
     },
     "test": {
       "dependsOn": ["build"],
@@ -23,5 +28,7 @@
       "dependsOn": ["build", "test", "lint"],
       "outputs": []
     }
-  }
+  },
+  "globalEnv": ["GITHUB_TOKEN"],
+  "globalDependencies": []
 }
