--- a/packages/react-sortable-list/package.json
+++ b/packages/react-sortable-list/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist"
