--- a/packages/react-table/package.json
+++ b/packages/react-table/package.json
@@ -19,6 +19,7 @@
     "react-table": "^7.7.0"
   },
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist"
