--- a/packages/responsive-design-mode/package.json
+++ b/packages/responsive-design-mode/package.json
@@ -18,6 +18,7 @@
     "build-storybook": "build-storybook"
   },
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist"
