--- a/turbo.json
+++ b/turbo.json
@@ -3,12 +3,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
-    },
-    "web#build": {
-      "dependsOn": ["^build"],
-      "env": ["SOME_OTHER_ENV_VAR"],
-      "outputs": [".next/**"]
+      "outputs": ["dist/**", ".next/**"]
     },
     "test": {
       "dependsOn": ["build"],
