--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
+    "test": "turbo run test --parallel",
     "deploy": "turbo run deploy",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
