--- a/packages/react-table/package.json
+++ b/packages/react-table/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@omakase-ui/react-table",
   "author": "Thaddeus Jiang",
-  "version": "0.1.5-rc.3",
+  "version": "0.1.6-rc.5",
   "license": "MIT",
   "scripts": {
     "start": "tsdx watch",
-    "build": "tsdx build",
+    "build": "tsdx build && yarn build-tailwind",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "prepare": "yarn build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build-tailwind": "NODE_ENV=production npx tailwindcss -o ./dist/react-table.css --minify"
   },
   "dependencies": {
     "classnames": "^2.3.1",
