--- a/packages/react-table/package.json
+++ b/packages/react-table/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@omakase-ui/react-table",
   "author": "Thaddeus Jiang",
-  "version": "0.1.6-rc.5",
+  "version": "0.1.6",
   "license": "MIT",
   "scripts": {
     "start": "tsdx watch",
