--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-app",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@omakase-ui/react-table": "*",
+    "@omakase-ui/react-baseui": "*",
     "@omakase-ui/react-responsive-design-mode": "*",
     "@omakase-ui/react-sortable-list": "*",
+    "@omakase-ui/react-table": "*",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-select": "^5.5.7"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
@@ -22,12 +24,12 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
+    "eslint-config-custom": "*",
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.5",
-    "typescript": "4.7.4",
-    "tsconfig": "*",
     "tailwind-config": "*",
-    "eslint-config-custom": "*"
+    "tailwindcss": "^3.1.5",
+    "tsconfig": "*",
+    "typescript": "4.7.4"
   }
 }
