--- a/packages/react-baseui/package.json
+++ b/packages/react-baseui/package.json
@@ -66,7 +66,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "tailwind-config": "*",
     "tailwindcss": "^3.0.23",
-    "tsconfig": "*",
+    "@omakase-ui/tsconfig": "*",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
