--- a/packages/react-sortable-list/package.json
+++ b/packages/react-sortable-list/package.json
@@ -59,7 +59,7 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3",
-    "tsconfig": "*",
+    "@omakase-ui/tsconfig": "*",
     "tailwind-config": "*",
     "eslint-config-custom": "*"
   },
