--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@omakase-ui/react-baseui": "*",
+    "@omakase-ui/react-simple-components": "*",
     "@omakase-ui/react-responsive-design-mode": "*",
     "@omakase-ui/react-sortable-list": "*",
     "@omakase-ui/react-table": "*",
@@ -19,17 +19,17 @@
     "react-select": "^5.5.7"
   },
   "devDependencies": {
-    "@omakase-ui/tsconfig": "*",
+    "@omakase-ui/config-ts": "*",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
     "daisyui": "^2.37.0",
     "eslint": "8.19.0",
-    "eslint-config-custom": "*",
+    "@omakase-ui/config-eslint": "*",
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
-    "tailwind-config": "*",
+    "@omakase-ui/config-tailwind": "*",
     "tailwindcss": "^3.1.5",
     "typescript": "4.7.4"
   }
