--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-custom",
+  "name": "@omakase-ui/config-eslint",
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
