--- a/packages/react-responsive-design-mode/package.json
+++ b/packages/react-responsive-design-mode/package.json
@@ -62,9 +62,9 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3",
-    "@omakase-ui/tsconfig": "*",
-    "tailwind-config": "*",
-    "eslint-config-custom": "*"
+    "@omakase-ui/config-ts": "*",
+    "@omakase-ui/config-tailwind": "*",
+    "@omakase-ui/config-eslint": "*"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
