--- a/packages/react-simple-components/package.json
+++ b/packages/react-simple-components/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@omakase-ui/react-baseui",
+  "name": "@omakase-ui/react-simple-components",
   "author": "Thaddeus Jiang",
-  "version": "0.0.1-rc.1",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "start": "tsdx watch",
@@ -56,7 +56,7 @@
     "babel-loader": "^8.2.4",
     "cssnano": "^5.1.7",
     "daisyui": "^2.13.6",
-    "eslint-config-custom": "*",
+    "@omakase-ui/config-eslint": "*",
     "husky": "^7.0.4",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "postcss": "^8.4.12",
@@ -64,20 +64,20 @@
     "react-dom": "^18.0.0",
     "react-is": "^18.0.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "tailwind-config": "*",
+    "@omakase-ui/config-tailwind": "*",
     "tailwindcss": "^3.0.23",
-    "@omakase-ui/tsconfig": "*",
+    "@omakase-ui/config-ts": "*",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3"
   },
-  "homepage": "https://github.com/ThaddeusJiang/omakase-ui/tree/dev/packages/react-baseui#readme",
+  "homepage": "https://github.com/ThaddeusJiang/omakase-ui/tree/dev/packages/react-simple-components#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ThaddeusJiang/omakase-ui.git"
   },
   "bugs": {
-    "url": "https://github.com/ThaddeusJiang/omakase-ui/tree/dev/packages/react-baseui/issues"
+    "url": "https://github.com/ThaddeusJiang/omakase-ui/tree/dev/packages/react-simple-components/issues"
   },
   "keywords": [
     "React.js",
