--- a/packages/react-sortable-list/package.json
+++ b/packages/react-sortable-list/package.json
@@ -59,9 +59,9 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3",
-    "@omakase-ui/tsconfig": "*",
-    "tailwind-config": "*",
-    "eslint-config-custom": "*"
+    "@omakase-ui/config-ts": "*",
+    "@omakase-ui/config-tailwind": "*",
+    "@omakase-ui/config-eslint": "*"
   },
   "dependencies": {
     "@dnd-kit/core": "^5.0.3",
