--- a/packages/react-table/package.json
+++ b/packages/react-table/package.json
@@ -68,9 +68,9 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.6.3",
-    "@omakase-ui/tsconfig": "*",
-    "tailwind-config": "*",
-    "eslint-config-custom": "*"
+    "@omakase-ui/config-ts": "*",
+    "@omakase-ui/config-tailwind": "*",
+    "@omakase-ui/config-eslint": "*"
   },
   "homepage": "https://github.com/ThaddeusJiang/omakase-ui/tree/dev/packages/react-table#readme",
   "repository": {
