--- a/package.json
+++ b/package.json
@@ -90,7 +90,9 @@
     ],
     "testEnvironment": "jest-environment-jsdom-sixteen"
   },
-  "dependencies": {},
+  "dependencies": {
+    "classnames": "^2.3.2"
+  },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
@@ -106,6 +108,7 @@
     "React.js",
     "TyeScript",
     "Components",
-    "Pagination Component"
+    "Pagination Component",
+    "Info Component"
   ]
 }
